# glossary-poetry

./: CONTRIBUTORS.rst  pyproject.toml
glossary/: glossary.py
glossary.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
glossary/data/: glossary.yml
